frontend finishing touches

--- a/templates/download.html
+++ b/templates/download.html
@@ -15,6 +15,6 @@
     
     <br />
     <form action="{{ url_for('run')}}">
-        <button type="submit">Back</button>
+        <button class="btn" type="submit">Back</button>
     </form>
 </body>
