--- a/static/styles/download.css
+++ b/static/styles/download.css
@@ -1,4 +1,30 @@
 body {
     background-color: rgb(20, 5, 43);
     color: white;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.btn {
+    background-color: #cda90b; 
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    box-shadow: 0px 2px 4px #413503;
+    margin-bottom: 20px;
+}
+
+.btn:hover {
+    background-color: #907706;
+}
+
+.btn:active {
+    background-color: #907706;
+    box-shadow: none;
+    top: 2px;
+    left: 1px;
 }
